--- a/templates/default/localrc.erb
+++ b/templates/default/localrc.erb
@@ -23,3 +23,5 @@ export OS_USERNAME=<%= @keystone_admin_username %>
 export OS_TENANT_NAME=<%= @keystone_admin_tenantname %>
 #export SERVICE_ENDPOINT=<%= @keystone_admin_url %>
 #export SERVICE_TOKEN=<%= @keystone_admin_token %>
+
+export SWIFT_AUTH_MODE=<%= @swift_authtype %>
